# team_youthful_xerox

./: .gitignore  README.md  pyproject.toml
configs/: credentials_example.json
data/: MTOW_dataset.csv  aircraft_characteristics.csv
feature_extractor/: feature_extractor_climb_takeoff.py  feature_extractor_v6.py  general_feature_extractor.py
module/: fetch_data.py  pre_processing.py  xgboost_mean_diff.py  xgboost_model.py  xgboost_model_categories.py
