[tool.poetry]
name = "prc-challenge"
version = "0.1.0"
description = ""
authors = ["Brieuc Ryelandt <brieuc.ryelandt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyopensky = "^2.9"
traffic = "^2.10.2"
loguru = "^0.7.2"
plotly = "^5.24.1"
nbformat = "^5.10.4"
polars = "^1.7.1"
mlflow = "^2.16.2"
tensorflow = "^2.17.0"
xgboost = "^2.1.1"
click = "^8.1.7"
optuna = "^4.0.0"
h2o = "^3.46.0.5"
folium = "^0.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
